2017-03-26 Dag Gillberg <dag.gillberg@cern.h>
	* Tagging TruthWeightTools-01-03-00
	* Contains Higgs ggF QCD uncertainty weights as discussed at
	* https://indico.cern.ch/event/618048/
	* Four uncertainty schemes: qcd_wg1_*, qcd_stxs, qcd_2017, qcd_jve
	* qcd_2017 is recommended. The other can be used for cross checks

2017-03-10 Dag Gillberg <dag.gillberg@cern.h>
	* Tagging TruthWeightTools-01-02-05
	* Added two new features
	* 1. RequireFinite - sets weights to nominal weight if not finite
	* 2. WeightCutOff - sets any weight to this value if larger
	* This helps a lot against events with crazy weights
	* Added finalize method that summarizes weight information
	* See slides at this HComb meeting: https://indico.cern.ch/event/617739/

2017-03-07 Dag Gillberg <dag.gillberg@cern.h>
	* Tagging TruthWeightTools-01-02-04
	* Fixed bug affecting the TruthWeightTool (and Higgs tool in AUTO mode) when running over many files
	* Slightly improved print() message of HiggsWeights
	* Added two more weights qcd_nnlops_nnlo, qcd_nnlops_pow
	* Extended HiggsWeightTest executable to produce many more histograms for uncertainty evaluation
	* Extended evaluateHiggsThoryUncert.C macro to make plots of evaluated uncertainty
	* Output from macro seem yield reasonable results, however also revealed problem with weights in samples
	  https://its.cern.ch/jira/browse/ATLMCPROD-4449
	* Added macro to analyze HNNLO input templates used for the Powehg NNLOPS generation

2017-03-03 Dag Gillberg <dag.gillberg@cern.h>
	* Tagging TruthWeightTools-01-02-03
	* Added example macro to evaluate Higgs theory uncertainties
	* All results produced so far makes sense! (mostly)
	* Central values, PDF uncertainties, alphaS. Didn't check QCD yet..

2017-03-02 Dag Gillberg <dag.gillberg@cern.h>
	* Tagging TruthWeightTools-01-02-02
	* All PDF weighs now read in to HiggsWeight struct, both to
	*  1. reweight to a differnet PDF (central value) and