@@ -204,9 +204,9 @@ namespace xAOD {
     updateWeights(hw.nominal,hw.qcd_wg1_pTH,hw.qcd_wg1_qm_b,hw.qcd_wg1_qm_t);
     updateWeights(hw.nominal,hw.qcd_wg1_vbf2j,hw.qcd_wg1_vbf3j);
     updateWeights(hw.nominal,hw.qcd_nnlops_nnlo,hw.qcd_nnlops_pow);
-    updateWeights(hw.nominal,hw.qcd_stxs);
-    updateWeights(hw.nominal,hw.qcd_2017);
-    updateWeights(hw.nominal,hw.qcd_jve);
+    updateWeights(hw.nominal,hw.ggF_qcd_stxs);
+    updateWeights(hw.nominal,hw.ggF_qcd_2017);
+    updateWeights(hw.nominal,hw.ggF_qcd_jve);
   }
 
   void HiggsWeightTool::updateWeight(const double &w_nom, double &w) {
@@ -409,23 +409,23 @@ namespace xAOD {
       Dsig_tot=sig_tot*0.039, D01=sig_tot*0.012, D12=sig_ge1*0.057;
     //Dsig_tot=2.48, D01=1.25, D12=0.88; // For cross check with BLPTW
 
-    hw.qcd_jve.push_back(w_nom*(1.0+Dsig_tot/sig_tot)); // incl
+    hw.ggF_qcd_jve.push_back(w_nom*(1.0+Dsig_tot/sig_tot)); // incl
 
     // eps0, i.e. mig 0 -> ge1
-    if (Njets==0) hw.qcd_jve.push_back(w_nom*(1.0-D01/sig0));
-    else hw.qcd_jve.push_back(w_nom*(1.0+D01/sig_ge1noVBF));
+    if (Njets==0) hw.ggF_qcd_jve.push_back(w_nom*(1.0-D01/sig0));
+    else hw.ggF_qcd_jve.push_back(w_nom*(1.0+D01/sig_ge1noVBF));
 
     // eps1, i.e. mig 1 -> ge2
-    if (Njets==0) hw.qcd_jve.push_back(w_nom);
-    else if (Njets==1) hw.qcd_jve.push_back(w_nom*(1.0-D12/sig1));
-    else hw.qcd_jve.push_back(w_nom*(1.0+D12/sig_ge2noVBF));
+    if (Njets==0) hw.ggF_qcd_jve.push_back(w_nom);
+    else if (Njets==1) hw.ggF_qcd_jve.push_back(w_nom*(1.0-D12/sig1));
+    else hw.ggF_qcd_jve.push_back(w_nom*(1.0+D12/sig_ge2noVBF));
     
     if (STXS_Stage1==101||STXS_Stage1==102)
-      hw.qcd_jve[0]=hw.qcd_jve[1]=hw.qcd_jve[2]=w_nom;
-    hw.qcd_jve.push_back(hw.qcd_wg1_vbf2j);
-    hw.qcd_jve.push_back(hw.qcd_wg1_vbf3j);
-    hw.qcd_jve.push_back(hw.qcd_wg1_pTH);
-    hw.qcd_jve.push_back(hw.qcd_wg1_qm_t);
+      hw.ggF_qcd_jve[0]=hw.ggF_qcd_jve[1]=hw.ggF_qcd_jve[2]=w_nom;
+    hw.ggF_qcd_jve.push_back(hw.qcd_wg1_vbf2j);
+    hw.ggF_qcd_jve.push_back(hw.qcd_wg1_vbf3j);
+    hw.ggF_qcd_jve.push_back(hw.qcd_wg1_pTH);
+    hw.ggF_qcd_jve.push_back(hw.qcd_wg1_qm_t);
 
     
 
@@ -434,14 +434,14 @@ namespace xAOD {
      */
 
     // First four sources are the BLPTW ones
-    hw.qcd_stxs.push_back(hw.qcd_wg1_mu);
-    hw.qcd_stxs.push_back(hw.qcd_wg1_res);
-    hw.qcd_stxs.push_back(hw.qcd_wg1_mig01);
-    hw.qcd_stxs.push_back(hw.qcd_wg1_mig12);
+    hw.ggF_qcd_stxs.push_back(hw.qcd_wg1_mu);
+    hw.ggF_qcd_stxs.push_back(hw.qcd_wg1_res);
+    hw.ggF_qcd_stxs.push_back(hw.qcd_wg1_mig01);
+    hw.ggF_qcd_stxs.push_back(hw.qcd_wg1_mig12);
     
     // Add in the VBF uncertainties here
-    hw.qcd_stxs.push_back(hw.qcd_wg1_vbf2j);
-    hw.qcd_stxs.push_back(hw.qcd_wg1_vbf3j);
+    hw.ggF_qcd_stxs.push_back(hw.qcd_wg1_vbf2j);
+    hw.ggF_qcd_stxs.push_back(hw.qcd_wg1_vbf3j);
 
     // This is followed by Dsig60, Dsig120 and Dsig200
     // These are extracted from Powheg NNLOPS scale variations (using this tool!)
@@ -463,21 +463,21 @@ namespace xAOD {
 
       if (pTH>200) dsig200=Dsig200_plus/sig200_plus; // +14.3%
     }
-    hw.qcd_stxs.push_back((1.0+dsig60)*w_nom);
-    hw.qcd_stxs.push_back((1.0+dsig120)*w_nom);
-    hw.qcd_stxs.push_back((1.0+dsig200)*w_nom);
+    hw.ggF_qcd_stxs.push_back((1.0+dsig60)*w_nom);
+    hw.ggF_qcd_stxs.push_back((1.0+dsig120)*w_nom);
+    hw.ggF_qcd_stxs.push_back((1.0+dsig200)*w_nom);
 
 
 
     // First four sources are the BLPTW ones
-    hw.qcd_2017.push_back(hw.qcd_wg1_mu);
-    hw.qcd_2017.push_back(hw.qcd_wg1_res);
-    hw.qcd_2017.push_back(hw.qcd_wg1_mig01);
-    hw.qcd_2017.push_back(hw.qcd_wg1_mig12);
+    hw.ggF_qcd_2017.push_back(hw.qcd_wg1_mu);
+    hw.ggF_qcd_2017.push_back(hw.qcd_wg1_res);
+    hw.ggF_qcd_2017.push_back(hw.qcd_wg1_mig01);
+    hw.ggF_qcd_2017.push_back(hw.qcd_wg1_mig12);
     
     // Add in the VBF uncertainties here
-    hw.qcd_2017.push_back(hw.qcd_wg1_vbf2j);
-    hw.qcd_2017.push_back(hw.qcd_wg1_vbf3j);
+    hw.ggF_qcd_2017.push_back(hw.qcd_wg1_vbf2j);
+    hw.ggF_qcd_2017.push_back(hw.qcd_wg1_vbf3j);
 
     // Smooth pTH uncertainties
     double pTH60 = w_nom, pTH120=w_nom;
@@ -485,10 +485,10 @@ namespace xAOD {
     else if (Njets>=2) pTH60 *= linInter(pTH,0,0.9,180,1.10); // >=2 jets
     
     if (Njets>0) pTH120 *= linInter(pTH,90,0.984,160,1.14);
-    hw.qcd_2017.push_back(pTH60);
-    hw.qcd_2017.push_back(pTH120);
+    hw.ggF_qcd_2017.push_back(pTH60);
+    hw.ggF_qcd_2017.push_back(pTH120);
     
-    hw.qcd_2017.push_back(hw.qcd_wg1_qm_t);
+    hw.ggF_qcd_2017.push_back(hw.qcd_wg1_qm_t);
 
     return hw;
   }
